[metadata]
name = sr-ai
author = Chainso
url = https://github.com/Chainso/sr-ai
version = file: version.txt
description = Reinforcement learning library
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = GPL 3.0 License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Langauge :: Python 3
    Programming Language :: Python 3.8

[options]
packages = sr_ai
python_requires = >=3.8
install_requires =
    sr-gym
    hlrl

[options.extras_require]
cuda = cudatoolkit>=10.2

docs =
    sphinx
    pytorch-sphinx-theme
